--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,15 @@
         "php": ">=7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.17",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/monolog-bundle": "^3.8",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
