--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,15 @@
         "symfony/framework-bundle": "4.4.*",
         "symfony/monolog-bundle": "^3.8",
         "symfony/twig-bundle": "4.4.*",
+        "symfony/webpack-encore-bundle": "^1.17",
         "symfony/yaml": "4.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "symfony/debug-bundle": "4.4.*",
+        "symfony/stopwatch": "4.4.*",
+        "symfony/web-profiler-bundle": "4.4.*",
         "symfony/web-server-bundle": "4.4.*"
     },
     "config": {
