--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/webpack-encore-bundle": "^1.17",
         "symfony/yaml": "4.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "symfony/string":"^5.0"
     },
     "require-dev": {
         "symfony/debug-bundle": "4.4.*",
