--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
         "symfony/monolog-bundle": "^3.8",
+        "symfony/string": "^5.0",
         "symfony/twig-bundle": "4.4.*",
         "symfony/webpack-encore-bundle": "^1.17",
         "symfony/yaml": "4.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0",
-        "symfony/string":"^5.0"
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
         "symfony/debug-bundle": "4.4.*",
