--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     },
     "require-dev": {
         "symfony/debug-bundle": "4.4.*",
+        "symfony/maker-bundle": "^1.39",
         "symfony/stopwatch": "4.4.*",
         "symfony/web-profiler-bundle": "4.4.*",
         "symfony/web-server-bundle": "4.4.*"
